Tried fixing overflow

--- a/app/css/field.css
+++ b/app/css/field.css
@@ -1,6 +1,6 @@
 div#game {
-    width: 600px;
-    min-width: fit-content;
+    width: fit-content;
+    max-width: 80vw;
     height: 75vh;
 
     position: absolute;
@@ -15,6 +15,13 @@ div#game {
 
 div#field {
     text-align: center;
+    width: 100%;
+}
+
+div.guess {
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 div.letter-container { 
